--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,17 @@
+:root {
+    --primary-color:blue;
+    --secondary-color:cyan;
+    --tritrary-color:red;
+    // #24CAFF
+    --hover-color:#DDDDDD;
+}
+
 html {
     scroll-behavior: smooth;
   }
   body {
-      background-color:black;
-    color:white;
+      background-color:var(--secondary-color);
+    color:var(--primary-color);
     padding:0;
     margin:0;
     
@@ -22,7 +30,7 @@ html {
   }
   nav {
     
-    background-color:white;
+    background-color:var(--primary-color);
     width:100%;
     margin:0;
     height: 60px;
@@ -37,7 +45,7 @@ html {
   nav a {
     position:relative;
     top:80px;
-    color:black;
+    color:var(--secondary-color);
     text-decoration:none;
   }
   .flex  {
@@ -46,7 +54,7 @@ html {
   }
   
   .flex {
-    background-color:white;
+    background-color:var(--primary-color);
     margin: 0 auto;
     padding: 0;
     width: 400px;
@@ -54,7 +62,7 @@ html {
   .black-square {
     width:30%;
     height:175px;
-    background-color:black;
+    background-color:var(--secondary-color);
     display:flex;
     flex-direction:row;
   }
@@ -86,12 +94,12 @@ html {
     
     top:75px;
     left:-250px;
-    background-color:white;
+    background-color:var(--primary-color);
     width:280px;
     height: 175px;
   }
   section#welcome-section {
-    border:45px solid white;
+    border:45px solid var(--primary-color);
     border-radius:100px;
     width:50%;
     margin:0 auto 0;
@@ -103,7 +111,7 @@ html {
     margin: 0;
   }
   .blue {
-    color:#24CAFF;
+    color:var(--tritrary-color);
   }
   #skills {
     margin: 100px auto;
@@ -116,13 +124,13 @@ html {
     min-width:340px;
     /* height:490px; */
     /* border: white 2px solid; */
-    background-color:white;
-    color:black;
-    border-bottom: white 15px solid;
+    background-color:var(--primary-color);
+    color:var(--secondary-color);
+    border-bottom: var(--primary-color) 15px solid;
   }
   .skills ul, .tools ul {
-    color:white;
-    background-color:black;
+    color:var(--primary-color);
+    background-color:var(--secondary-color);
     height:70%;
     margin: 15px;
     padding: 20px 60px ;
@@ -140,20 +148,20 @@ html {
   .project {
     width:340;
     height:360;
-    border: black 4px solid;
-    background-color:white;
-    color:black;
+    border: var(--secondary-color) 4px solid;
+    background-color:var(--primary-color);
+    color:var(--secondary-color);
     padding: 80px 10px 20px;
     text-align:center;
   }
   .project:hover {
-    background-color: #DDDDDD;
+    background-color: var(--hover-color);
   }
   .project img {
     width: 310px;
     height:310px;
     object-fit:cover;
-    border: 1px solid  #DDDDDD;
+    border: 1px solid  var(--hover-color);
   }
   .project:hover img {
     transform: scale(0.95)
@@ -165,7 +173,7 @@ html {
     margin: 0 auto;
     width: 200px;
     text-align:center;
-    background-color:black;
+    background-color:var(--secondary-color);
     position:relative;
     top:50px;
     padding:5px;
@@ -177,8 +185,8 @@ html {
   #contacts {
     margin: 100px 0 0;
     text-align:center;
-    background-color:white;
-    color:black;
+    background-color:var(--primary-color);
+    color:var(--secondary-color);
     padding:275px 0;
   }
   footer {
@@ -186,5 +194,5 @@ html {
     text-align:center;
   }
   footer a {
-    color:white;
+    color:var(--primary-color);
   }
